--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_compass: ^0.8.1
   loading_animation_widget: ^1.3.0
   provider: ^6.1.5
+  shared_preferences: ^2.5.3
+  showcaseview: ^4.0.1
 
 dev_dependencies:
   flutter_test:
