update: added prayer time reminder notifications feature feat: added notification background services

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   provider: ^6.1.5
   shared_preferences: ^2.5.3
   showcaseview: ^4.0.1
+  flutter_local_notifications: ^19.3.0
+  timezone: ^0.10.1
+  android_alarm_manager_plus: ^4.0.7
+  workmanager: ^0.8.0
 
 dev_dependencies:
   flutter_test:
